--- a/app/src/main/res/layout/make_loan_layout.xml
+++ b/app/src/main/res/layout/make_loan_layout.xml
@@ -14,6 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get a Loan"
-        android:id="@+id/button"
+        android:id="@+id/get_a_loan_button"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
