--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height = "match_parent"
-    android:layout_width = "match_parent">
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.kaimou.cashmoney.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="2"
+                android:baselineAligned="false">
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -32,7 +41,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="Large Text"
                             android:id="@+id/credit_line_money"/>
 
                         <TextView
@@ -53,13 +61,13 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceLarge"
                             android:id="@+id/make_a_loan_textview"
-                            android:text = "Test Text"
                             android:layout_gravity="center_horizontal" />
 
                         <Button
                             android:layout_width="wrap_content"
                             android:layout_height="35dp"
                             android:text="Get a Loan"
+                            style = "@style/Button"
                             android:id="@+id/get_a_loan_button"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginBottom="30dp" />
@@ -79,41 +87,40 @@
             android:layout_gravity="bottom"
             card_view:cardCornerRadius="4dp"
             android:layout_weight="6">
-            <RelativeLayout
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/paymentListView1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/payment_loans_TextV" />
 
-                <TextView
-                    android:id="@+id/payment_loans_TextV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Current Loans"
-                    android:textSize="16sp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/paymentListView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_below="@+id/payment_loans_TextV"
-                    android:layout_centerHorizontal="true" />
-
-            </RelativeLayout>
 
 
         </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/payment_loans_TextV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Current Loans"
+            android:textSize="16sp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Pay Balance"
+            style = "@style/Button"
             android:id="@+id/button"
             android:layout_gravity="center_horizontal" />
 
