--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".LoginActivity">
+    tools:context="com.example.kaimou.cashmoney.LoginActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -22,5 +22,6 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/login_main" />
+
 
 </android.support.design.widget.CoordinatorLayout>
